[gd_scene load_steps=2 format=3 uid="uid://bapc3bg6tb638"]

[ext_resource type="Script" path="res://scripts/grappling_hook.gd" id="1_gkhup"]

[node name="GrapplingHook" type="Node3D"]
script = ExtResource("1_gkhup")

[node name="GrappleRay" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, -50)

[node name="LaunchSoundEffect" type="AudioStreamPlayer" parent="."]

[node name="RetractSoundEffect" type="AudioStreamPlayer" parent="."]

[node name="GrappleSoundEffect" type="AudioStreamPlayer" parent="."]
